tested the modified 13bus networks for the radial and meshed topology. added output of common fairness indices to get familiar with results.

--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,8 @@ version = "1.0.0-DEV"
 authors = ["Amanda West <38090325+awest32@users.noreply.github.com> and contributors"]
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DiffOpt = "930fe3bc-9c6b-11ea-2d94-6184641e85e7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FrankWolfe = "f55ce6ea-fdc5-4628-88c5-0087fe54bd30"
@@ -25,6 +27,8 @@ Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 
 [compat]
+CSV = "0.10.15"
+DataFrames = "1.8.1"
 DiffOpt = "0.5.2"
 Distributions = "0.25.122"
 FrankWolfe = "0.6.1"
