--- a/Project.toml
+++ b/Project.toml
@@ -11,12 +11,15 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FrankWolfe = "f55ce6ea-fdc5-4628-88c5-0087fe54bd30"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 Gurobi = "2e9cd046-0924-5485-92f1-d5272153d98b"
+HSL_jll = "017b0a0e-03f4-516a-9b91-836bbd1904dd"
 HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
 InfrastructureModels = "2030c09a-7f63-5d83-885d-db604e0e9cc0"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Juniper = "2ddba703-00a4-53a7-87a5-e8b9971dde84"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MKL = "33e6dc65-8f57-5167-99aa-e5a354878fb2"
+MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 Memento = "f28f55f0-a522-5efc-85c2-fe41dfb9b2d9"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
@@ -40,6 +43,8 @@ Ipopt = "1.12.1"
 JuMP = "1.29.2"
 Juniper = "0.9.4"
 LinearAlgebra = "1.12.0"
+MKL = "0.9.0"
+MathOptInterface = "1.46.0"
 Memento = "1.4.1"
 Plots = "1.41.1"
 PowerModels = "0.21.5"
